@@ -4,11 +4,18 @@
     <parent>
         <groupId>fr.ght1pc9kc</groupId>
         <artifactId>juery</artifactId>
-        <version>1.1.0</version>
+        <version>1.2.0</version>
     </parent>
 
     <artifactId>juery-api</artifactId>
     <name>Juery API</name>
+
+    <properties>
+        <surefire.argline.opens>
+            --add-opens juery.api/fr.ght1pc9kc.juery.api=ALL-UNNAMED
+            --add-opens juery.api/fr.ght1pc9kc.juery.api.filter=ALL-UNNAMED
+        </surefire.argline.opens>
+    </properties>
 
     <dependencies>
         <dependency>
